# learnwgpu

./: README.md
tutorials/t001-window/: Cargo.toml
tutorials/t001-window/src/: main.rs
tutorials/t002-triangle/: Cargo.toml
tutorials/t002-triangle/src/: main.rs
tutorials/t003-shader/src/: shader.wgsl
tutorials/t004-texture/: Cargo.toml
tutorials/t004-texture/src/: main.rs
tutorials/t005-transform/src/: shader.wgsl
tutorials/t006-coord/: Cargo.toml
tutorials/t007-camera/: Cargo.toml
tutorials/t007-camera/src/: main.rs
tutorials/t01-window/: Cargo.toml
tutorials/t01-window/src/: main.rs
tutorials/t02-triangle/: Cargo.toml  README.md
tutorials/t02-triangle/src/: main.rs  shader-v2.wgsl  v1.rs  v2.rs  v3.rs  v4.rs  vertex.rs
tutorials/t03-shader/: Cargo.toml
tutorials/t03-shader/src/: main.rs  shader.wgsl
tutorials/t04-texture/src/: main.rs  shader.wgsl
tutorials/t05-transform/: Cargo.toml
tutorials/t05-transform/src/: main.rs
tutorials/t06-coord/src/: main.rs  shader.wgsl
