[package]
name = "t02-triangle"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = "0.27"
wgpu = "0.14.0"
tracing = "0.1"
tracing-subscriber = "0.3"
pollster = "0.2.5"
clap={version="4.0.10", features=["derive"]}
bytemuck={version="1.12.1", features = [ "derive" ]}